--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -156,7 +156,7 @@
                     android:layout_marginBottom="7dp"
                     android:text="¡Vamos!"
 
-                    android:textColor="@color/teal_200" />
+                    android:textColor="@color/colorPrimary" />
 
             </RelativeLayout>
 
