--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -10,7 +10,7 @@
     tools:context=".PrincipalActivity">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/ejercicios_calorias"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_margin="16dp"
@@ -93,7 +93,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/ejercicios_calorias">
 
         <LinearLayout
             android:layout_width="match_parent"
