--- a/app/src/main/res/layout/activity_brazo_medio.xml
+++ b/app/src/main/res/layout/activity_brazo_medio.xml
@@ -433,7 +433,7 @@
                     android:id="@+id/imageView19"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante3" />
+                    app:srcCompat="@drawable/flexiones_simples" />
 
                 <TextView
                     android:id="@+id/textView20"
@@ -573,7 +573,7 @@
                     android:id="@+id/imageView24"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante3" />
+                    app:srcCompat="@drawable/flexiones_simples" />
 
                 <TextView
                     android:id="@+id/textView25"
