--- a/app/src/main/res/layout/activity_brazo_principiante.xml
+++ b/app/src/main/res/layout/activity_brazo_principiante.xml
@@ -209,7 +209,7 @@
                     android:id="@+id/imageView7"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante1" />
+                    app:srcCompat="@drawable/saltos_de_tijera" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -285,7 +285,7 @@
                     android:id="@+id/imageView16"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante3" />
+                    app:srcCompat="@drawable/flexiones_simples" />
 
                 <TextView
                     android:id="@+id/textView17"
