--- a/app/src/main/res/layout/activity_pecho_medio.xml
+++ b/app/src/main/res/layout/activity_pecho_medio.xml
@@ -58,7 +58,7 @@
                     android:id="@+id/imgeSaltoTijera"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante1" />
+                    app:srcCompat="@drawable/saltos_de_tijera" />
 
                 <TextView
                     android:id="@+id/textView9"
@@ -124,7 +124,7 @@
                     android:id="@+id/imageView3"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante3" />
+                    app:srcCompat="@drawable/flexiones_simples" />
 
                 <TextView
                     android:id="@+id/textView11"
