--- a/app/src/main/res/layout/activity_pecho_principiante.xml
+++ b/app/src/main/res/layout/activity_pecho_principiante.xml
@@ -60,7 +60,7 @@
                     android:id="@+id/imgeSaltoTijera"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante1" />
+                    app:srcCompat="@drawable/saltos_de_tijera" />
 
                 <TextView
                     android:id="@+id/textView9"
@@ -93,7 +93,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante2" />
+                    app:srcCompat="@drawable/flexiones_inclinacion_apoyo_brazos" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -126,7 +126,7 @@
                     android:id="@+id/imageView3"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante3" />
+                    app:srcCompat="@drawable/flexiones_simples" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -224,7 +224,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="99dp"
                     android:layout_height="99dp"
-                    app:srcCompat="@drawable/principiante2" />
+                    app:srcCompat="@drawable/flexiones_inclinacion_apoyo_brazos" />
 
                 <TextView
                     android:id="@+id/textView13"
